--- a/src/componenets/ImageList.css
+++ b/src/componenets/ImageList.css
@@ -1,10 +1,10 @@
 .image-list {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-gap: 10px;
-    grid-auto-rows: 200px;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    grid-gap: 0 10px;
+    grid-auto-rows: 10px;
 }
 
 .image-list img {
-    width: 200px;
+    width: 150px;
 }
